# kate-image-preview-plugin

./: .gitignore  CMakeLists.txt  ImagePreviewPlugin.cpp  ImagePreviewPlugin.h  README.md  plugin.json
